Add zshrc, more comprehensive alacritty and helix config

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,45 @@
 working_directory = "/home/nicole"
 
+[colors]
+[colors.bright]
+black = "#959da5"
+blue = "#005cc5"
+cyan = "#3192aa"
+green = "#22863a"
+magenta = "#5a32a3"
+red = "#cb2431"
+white = "#d1d5da"
+yellow = "#b08800"
+
+[colors.normal]
+black = "#24292e"
+blue = "#0366d6"
+cyan = "#0598bc"
+green = "#28a745"
+magenta = "#5a32a3"
+red = "#d73a49"
+white = "#6a737d"
+yellow = "#dbab09"
+
+[colors.primary]
+background = "#ffffff"
+foreground = "#24292f"
+
+[font]
+size = 10
+
+[font.bold]
+family = "BlexMono Nerd Font Mono"
+style = "Regular"
+
 [font.normal]
 family = "BlexMono Nerd Font Mono"
 style = "Light"
+
+[window]
+decorations_theme_variant = "Dark"
+dynamic_title = true
+
+[window.padding]
+x = 4
+y = 4
